--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-alias (1-0.0.1-3) unstable; urgency=low
+
+  * Prueba del comando instalar.
+
+ -- Hugo Ruscitti <hugoruscitti@gmail.com>  Mon, 11 May 2015 16:13:40 -0300
+
 huayra-alias (1-0.0.1-2) unstable; urgency=low
 
   * Arreglo menor. 
