--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-alias (1-0.0.2) unstable; urgency=low
+
+  * Agregando coloreado a la busqueda de paquetes.
+
+ -- Hugo Ruscitti <hugoruscitti@gmail.com>  Thu, 14 May 2015 11:58:42 -0300
+
 huayra-alias (1-0.0.1-7) unstable; urgency=low
 
   * Haciendo que se actualice el cache solo despues de hacer apt-get update.
