--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-alias (1-0.1.0) unstable; urgency=low
+
+  * Cambiando el numero de versión.
+
+ -- Hugo Ruscitti <hugoruscitti@gmail.com>  Fri, 15 May 2015 11:46:43 -0300
+
 huayra-alias (1-0.0.5) unstable; urgency=low
 
   * Arreglos menores.
