--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-alias (0.1.1) unstable; urgency=low
+
+  * Arreglo menor. 
+
+ -- Hugo Ruscitti <hugoruscitti@gmail.com>  Fri, 15 May 2015 16:38:22 -0300
+
 huayra-alias (0.1.0) unstable; urgency=low
 
   * Cambiando nomenclarura.
