--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+huayra-alias (0.1.5) unstable; urgency=low
+
+  * Update changelog for 0.1.3 release
+  * reparando el comando para imprimir ayuda
+  * Release 0.1.5
+  * Release 0.1.6
+  * Update changelog for 0.1.4 release
+  * forzando a borrar el cache cuando actualiza.
+  * Release 0.1.7
+  * actualizando gitignore.
+  * Release 0.1.8
+
+ -- Hugo Ruscitti <hugoruscitti@gmail.com>  Fri, 29 May 2015 13:56:13 -0300
+
 huayra-alias (0.1.4) unstable; urgency=low
 
   * Update changelog for 0.1.3 release
