--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+huayra-alias (0.1.8) unstable; urgency=low
+
+  * Reparando correlación de versiones.
+
+ -- Hugo Ruscitti <hugoruscitti@gmail.com>  Fri, 29 May 2015 13:57:10 -0300
+
 huayra-alias (0.1.5) unstable; urgency=low
 
   * Update changelog for 0.1.3 release
